# go-convex-telegram-turborepo

./: .env old  .env.bak  .env.example  .gitignore  BAUHAUS_NOTION_UI_UPDATES.md  CLEANUP_SUMMARY.md  COOLIFY-DEPLOYMENT.md  COOLIFY-QUICK-FIX.md  LLM-INTEGRATION-GUIDE.md  LOCAL-SETUP-GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  RAG-INTEGRATION-COMPLETE.md  RAM-ALLOCATION-GUIDE.md  README.md  SETUP.md  TESTING.md  TITLE_SAVING_IMPLEMENTATION.md  TRON_NOTION_UX_IMPROVEMENTS.md  Terminal  VECTOR-LLM-OPTIMIZATION-GUIDE.md  calculate-ram.sh  deploy-convex-prod.sh  deploy-convex.sh  deploy-minimal-llm.sh  deploy-optimized-llm.sh  dev-restart-web.sh  docker-compose.yaml  docker-compose.yml  find-old-script-references.sh  generate-coolify-env.sh  generate-embeddings.js  nginx.conf  package.json  pnpm-lock.yaml  reset-web-only.sh  run-tests.sh  setup-mobile.sh  setup.sh  test-convex-health.sh  test-embedding-flow.js  (+10 more)
Z-production deployment/: docker-compose.yaml  docker-compose.yml
apps/docker-convex/: .env.docker.example  .env.local.example  ADMIN_KEY_WORKFLOW.md  README.md  deploy-convex-prod.sh  deploy-convex.sh  jest.config.js  (+3 more)
apps/lightweight-llm/: .env.example  DOCKER_SETUP.md  Dockerfile  INTEGRATION_SUMMARY.md  LANGEXTRACT_INTEGRATION.md  RAG_MODULES_README.md  README.md  build_and_test.sh  chat_handler.py  config.py  conversation_title.py  docker_startup.py  install_langextract.py  langextract_rag.py  main.py  model_manager.py  pyproject.toml  qualitative_rag.py  quantitative_rag.py  rag_processor.py  requirements.txt  status_reporter.py  test_docker_build.sh  test_docker_startup.py  test_langextract_integration.py
apps/vector-convert-llm/: Dockerfile  debug_connectivity.sh  main.py  minimal-main.py  minimal-requirements.txt  minimal.Dockerfile  newish-main.py  newish.Dockerfile  optimized-main.py  optimized-requirements.txt  optimized.Dockerfile  pyproject.toml  requirements.txt  simple_app.py  startup.sh  status_reporter.py  test_connection.py
helper-scripts/: api-endpoint-report.txt  api-web-convex-check.sh  deploy-convex-all.sh  deploy-convex-api.sh  deploy-convex-prod.sh  deploy-convex.sh  deploy-minimal-llm.sh  deploy-optimized-llm.sh  deploy-stable-llm.sh  docker-manager.sh  docker-troubleshoot.sh  reset-convex-database.sh  reset-web-only.sh  setup-ssl.sh  test-llm-connection.sh
local-deployment/: docker-compose.yml
scripts/: start-llm.sh  test-llm-integration.sh  test-title-generation.sh
(+499 files in other folders)
